# coursework_3

./: .coverage  .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_api_client_py.html  z_145eef247bfb46b6_config_py.html  z_145eef247bfb46b6_data_sources_py.html  z_145eef247bfb46b6_db_manager_py.html  z_145eef247bfb46b6_db_queries_py.html  z_145eef247bfb46b6_utils_py.html
src/: __init__.py  api_client.py  config.py  data_sources.py  db_manager.py  db_queries.py  utils.py  vacancy.py  vacancy_storage.py
tests/: conftest.py  test_api_client.py  test_config.py  test_data_sources.py  test_db_manager.py  test_db_queries.py  test_utils.py
